--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -6,13 +6,13 @@ ENV NODE_ENV production
 
 
 WORKDIR /usr/src/app
-RUN --mount=type=bind,source=package.json,target=package.json \
-    --mount=type=bind,source=package-lock.json,target=package-lock.json \
-    --mount=type=cache,target=/root/.npm \
-    npm ci --omit=dev
+RUN COPY package*.json .
+RUN . .
+
+RUN npm ci --omit=dev
 
 USER node
-COPY . .
+COPY . .        
 
 EXPOSE 3000
 
