--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -8,7 +8,7 @@ ENV NODE_ENV production
 WORKDIR /usr/src/app
 COPY package*.json .
 
-RUN npm ci --omit=dev
+RUN npm install
 COPY . .        
 
 EXPOSE 3000
