--- a/deploy/buildspec.yml
+++ b/deploy/buildspec.yml
@@ -21,6 +21,7 @@ phases:
     commands:
       - cd ..
       - REVISON=$(aws ecs describe-task-definition --task-definition arn:aws:ecs:ap-northeast-2:182024812696:task-definition/test-service-container-family | jq -r '.taskDefinition.revision')
+      - REVISON=$((REVISON + 1))
       - echo "REVISION >> $REVISON"
       - sed -i 's/${REVISON}/'"$REVISON"'/g' deploy/appspec.yml
       - cat ./deploy/appspec.yml
